get requests by users
