# src/modules/users/dtos/ICreateUsersDTO.ts
@@ -4,5 +4,6 @@ interface IUserDTO {
   nickname: string;
   email: string;
   password: string;
+  isPrivate?: boolean;
 }
 export { IUserDTO };
