# src/modules/users/infra/typeorm/entities/Users.ts
@@ -1,4 +1,10 @@
-import { Column, CreateDateColumn, Entity, PrimaryColumn, UpdateDateColumn } from "typeorm";
+import {
+  Column,
+  CreateDateColumn,
+  Entity,
+  PrimaryColumn,
+  UpdateDateColumn,
+} from "typeorm";
 import { v4 as uuidV4 } from "uuid";
 
 @Entity("users")
@@ -24,12 +30,18 @@ class User {
   @CreateDateColumn()
   created_at: Date;
 
+  @Column()
+  isPrivate: boolean;
+
   @UpdateDateColumn()
   updated_at: Date;
 
   constructor() {
     if (!this.id) {
       this.id = uuidV4();
+    }
+    if (!this.isPrivate) {
+      this.isPrivate = false;
     }
   }
 }
